# AFP-ANT

./: .gitignore  AFP-ANT.cabal  README.md
ant_simulator/: Ants.hs  GamePlay.hs
presentation/: slides.md
src/: Abstractions.hs  Ant.hs  AntGoto.hs  AntMonad.hs  AntMonadII.hs  AntMonadIII.hs  AntState.hs  Basic.hs  Examples.hs  Genetic.hs  Optimization.hs  RandomSearch.hs  Simulator.hs  Strategy.hs  syntax.hs
src/Ant/: Arbitrary.hs  Base.hs  Monad.hs  Optimization.hs
src/Ant/Arbitrary/: Base.hs  Optimization.hs
src/Genetic/: Evolve.hs  ReadInstructions.hs  sample0.world
src/RandomSearch/: Search.hs
src/Simulator/: Base.hs
test/: Spec.hs
test/Spec/: Base.hs  Optimization.hs  Simulator.hs
