name:                AFP-ANT
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/maffh92/AFP-ANT
license:             BSD3
license-file:        LICENSE
author:              Martijn Fleuren, Marinus Oostegard,
                     Carlos Tomé Cortiñas & Matthew Swart
-- maintainer:          example@example.com
copyright:           2017 The authors above
category:            Languages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       Simulator.Base,
                       Ant.Arbitrary.Base
  exposed-modules:     Ant,
                       Ant.Base,
                       Ant.Monad,
                       Ant.Optimization,
                       Ant.Arbitrary,
                       Abstractions,
                       Strategy,
                       Simulator,
                       Genetic,
                       Genetic.Evolve
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       lens,
                       tardis,
                       mtl,
                       generic-random,
                       array,
                       QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite AFP-ANT-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Spec.Optimization
  main-is:             Spec.hs
  build-depends:       base
                     , AFP-ANT
                     , hspec
                     , QuickCheck
                     , generic-random
                     , array
                     , lens
                     , containers
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maffh92/AFP-ANT
